--- a/src/components/CommentItem/index.css
+++ b/src/components/CommentItem/index.css
@@ -32,14 +32,17 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 20px;
+  width: 100%;
+  min-width: 600px;
 }
 
 .initial-comment-container {
   display: flex;
+  width: 100%;
 }
 
 .initial-container {
-  width: 10%;
+  width: 20%;
   margin-right: 15px;
 }
 
@@ -54,6 +57,10 @@
   text-align: center;
   margin-top: 18px;
   padding-top: 10px;
+}
+
+.name-time-container {
+  width: 80%;
 }
 
 .name-time {
@@ -89,6 +96,7 @@
   display: flex;
   justify-content: space-between;
   margin-top: 4px;
+  width: 100%;
 }
 
 .like-img-container {
