--- a/src/components/CommentItem/index.css
+++ b/src/components/CommentItem/index.css
@@ -29,113 +29,137 @@
 /* Write your CSS here */
 
 .comment-container {
-  display: flex;
+  list-style-type: none;
+  /* display: flex;
   flex-direction: column;
   margin-bottom: 20px;
   width: 100%;
-  min-width: 600px;
+  min-width: 600px; */
 }
 
 .initial-comment-container {
   display: flex;
-  width: 100%;
+  /* width: 100%; */
 }
 
 .initial-container {
-  width: 20%;
-  margin-right: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 32px;
+  height: 32px;
+  border-radius: 16px;
+  /* width: 20%; */
+  margin-top: 18px;
+  margin-right: 8px;
+  flex-shrink: 0;
 }
 
 .initial {
   color: #ffffff;
-  border-radius: 25px;
+  /* border-radius: 25px;
   width: 50px;
-  height: 50px;
+  height: 50px; */
   font-family: 'Roboto';
-  font-size: 24px;
-  font-weight: 500;
+  font-size: 16px;
+  margin: 0;
+  /* font-weight: 500;
   text-align: center;
   margin-top: 18px;
-  padding-top: 10px;
+  padding-top: 10px; */
 }
 
 .name-time-container {
-  width: 80%;
+  width: 100%;
 }
 
 .name-time {
   display: flex;
   align-items: center;
-  margin-top: 0px;
+  margin-top: 20px;
+  margin-bottom: 12px;
 }
 
 .name {
   color: #334155;
   font-family: 'Roboto';
-  font-size: 28px;
+  font-size: 16px;
   font-weight: 500;
-  margin-right: 20px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .time {
   color: #94a3b8;
   font-family: 'Roboto';
-  font-size: 14px;
-  font-weight: 500;
-  margin-top: 18px;
+  font-size: 12px;
+  /* font-weight: 500; */
+  margin-left: 18px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .comment-text {
   color: #64748b;
   font-family: 'Roboto';
-  font-size: 18px;
-  margin-bottom: 0;
+  font-size: 14px;
+  /* margin-bottom: 0; */
 }
 
-.like-btn-container {
+.buttons-container {
   display: flex;
   justify-content: space-between;
-  margin-top: 4px;
-  width: 100%;
+  align-items: center;
+  /* margin-top: 4px;
+  width: 100%; */
 }
 
-.like-img-container {
+.like-container {
   display: flex;
   align-items: center;
 }
 
 .like-img {
-  width: 25px;
-  height: 25px;
-  margin-right: 10px;
-  margin-left: 15px;
+  width: 20px;
+  height: 20px;
+  margin-right: 8px;
+  /* margin-left: 15px; */
 }
 
 .like-btn {
   color: #7e858e;
   font-family: 'Roboto';
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 500;
   outline: none;
   border: none;
   cursor: pointer;
   background-color: transparent;
-  margin-top: 5px;
+  /* margin-top: 5px; */
 }
 
 .blue-text {
-  color: #0b69ff;
+  color: #0ea5e9;
 }
 
 .delete-btn {
+  color: #7e858e;
+  font-family: 'Roboto';
+  font-size: 14px;
+  font-weight: 500;
   outline: none;
   border: none;
   cursor: pointer;
   background-color: transparent;
-  margin-top: 10px;
+  /* margin-top: 10px; */
 }
 
 .delete-icon {
   width: 20px;
   height: 20px;
+}
+
+.comment-line {
+  width: 100%;
+  border: 1px solid #dee0e3;
 }
