--- a/src/components/Comments/index.css
+++ b/src/components/Comments/index.css
@@ -1,134 +1,193 @@
 .app-container {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  /* flex-direction: column;
   align-items: center;
   min-height: 100vh;
-  padding: 25px 20px;
+  padding: 25px 20px; */
+  margin-top: 48px;
+}
+
+@media screen and (min-width: 768px) {
+  .app-container {
+    margin-top: 96px;
+  }
 }
 
 .comments-banner-container {
-  width: 80%;
-  margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  max-width: 550px;
+  /* margin-bottom: 10px; */
+}
+
+@media screen and (min-width: 768px) {
+  .comments-banner-container {
+    width: 80%;
+    max-width: 1140px;
+  }
 }
 
 .heading {
   color: #1e293b;
-  font-size: 42px;
+  font-size: 48px;
   font-family: 'Roboto';
-  font-weight: bold;
+  margin-bottom: 12px;
+  /* font-weight: bold; */
 }
 
-.input-img-container {
+@media screen and (min-width: 768px) {
+  .heading {
+    font-size: 56px;
+    margin-top: 0px;
+    margin-bottom: 24px;
+  }
+}
+
+.comments-inputs {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 @media screen and (min-width: 768px) {
-  .input-img-container {
+  .comments-inputs {
     flex-direction: row;
   }
-}
-
-.comments-img {
-  width: 70%;
-}
-
-@media screen and (min-width: 768px) {
-  .comments-img {
-    width: 100%;
-    margin-right: 20px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .img-container {
-    order: 1;
-    margin-left: auto;
-  }
-}
-
-.description {
-  color: #475569;
-  font-size: 18px;
-  font-family: 'Roboto';
-  font-weight: 500;
 }
 
 .form-container {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
+  width: 100%;
+  order: 1;
+  /* justify-content: flex-start;
+  align-items: flex-start; */
 }
 
-.user-name {
-  color: #1e293b;
+@media screen and (min-width: 768px) {
+  .form-container {
+    width: 28%;
+    min-width: 300px;
+    order: 0;
+  }
+}
+
+.form-description {
+  color: #475569;
   font-size: 16px;
   font-family: 'Roboto';
   font-weight: 500;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  border: 2px solid #cbd2d9;
-  padding: 10px 16px;
-  border-radius: 5px;
-  width: 100%;
+  margin-top: 24px;
+}
+
+.user-name {
+  /* color: #1e293b; */
+  font-size: 16px;
+  font-family: 'Roboto';
+  height: 40px;
+  /* font-weight: 500; */
+  /* margin-top: 10px; */
+  margin-bottom: 12px;
+  border: 1px solid #cbd2d9;
+  padding: 8px 16px;
+  border-radius: 4px;
+  /* width: 100%; */
   outline: none;
 }
 
 .input-comment {
-  color: #1e293b;
-  font-size: 18px;
+  /* color: #1e293b; */
+  font-size: 16px;
   font-family: 'Roboto';
-  font-weight: 500;
-  margin-top: 10px;
-  margin-bottom: 20px;
-  border: 2px solid #cbd2d9;
+  /* font-weight: 500; */
+  /* margin-top: 10px;
+  margin-bottom: 20px; */
+  border: 1px solid #cbd2d9;
   padding: 8px 16px;
-  border-radius: 5px;
-  width: 100%;
+  border-radius: 4px;
+  /* width: 100%; */
   outline: none;
 }
 
 .btn {
   background-color: #0284c7;
   color: #ffffff;
-  font-size: 12px;
+  font-size: 14px;
   font-family: 'Roboto';
-  padding: 8px 12px;
+  padding: 8px 16px;
   border: none;
-  border-radius: 5px;
+  border-radius: 4px;
   cursor: pointer;
+  outline: none;
+  margin-top: 16px;
+  min-width: 60px;
+  align-self: flex-start;
 }
+
+.comments-img {
+  width: 280px;
+  height: 200px;
+  /* width: 70%; */
+}
+
+@media screen and (min-width: 768px) {
+  .comments-img {
+    width: 380px;
+    height: 300px;
+    /* width: 100%;
+    margin-right: 20px; */
+  }
+}
+
+/* @media screen and (min-width: 768px) {
+  .img-container {
+    order: 1;
+    margin-left: auto;
+  }
+} */
 
 .hr-line {
-  color: #cbd2d9;
+  border: 1px solid #dee0e3;
+  /* color: #cbd2d9;
   background-color: #cbd2d9;
-  size: 1px;
-  width: 80%;
-  margin-right: auto;
-  margin-top: 10px;
+  size: 1px; */
+  width: 100%;
+  /* margin-right: auto; */
+  margin-top: 16px;
 }
 
-.comments-list-container {
+.count-heading {
   /* align-self: flex-start; */
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  /* margin-left: 50px; */
-  width: 80%;
-}
-
-.comments-count {
-  align-self: flex-start;
+  color: #475569;
   font-family: 'Roboto';
+  font-size: 14px;
+  font-weight: 500;
+  margin-left: 8px;
 }
 
 .count {
+  text-align: center;
   color: #ffffff;
   background-color: #0284c7;
-  padding: 3px 8px;
-  border-radius: 5px;
-  margin-right: 5px;
-  padding-bottom: 4px;
+  font-family: 'Roboto';
+  font-size: 12px;
+  padding: 4px 8px;
+  border-radius: 4px;
+  margin-right: 4px;
+  /* padding-bottom: 4px; */
+}
+
+.comments-list {
+  padding-left: 0;
+  margin-top: 0;
+  /* align-self: flex-start; */
+  /* display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start; */
+  /* margin-left: 50px; */
+  /* width: 80%; */
 }
